# game-of-life.ai

./: .gitignore  pyproject.toml  readme.md  requirements.txt  setup.py
game_of_life/: __init__.py  config.py  constants.py  engine.py  innovation.py  main.py  models.py  persistence.py  regex.py  rules.py  ui.py  world.py
game_of_life/ai/: __init__.py  brain.py  client.py  langchain_handler.py  prompt.py  scheduler.py
game_of_life/data_classes/: action.py  animal.py  class.py  entity.py  human.py  worker.py  world_entity.py
tests/: conftest.py  test_ai_client.py  test_engine.py  test_identity.py  test_innovation.py  test_main.py  test_memory.py  test_persistence.py  test_rules.py  test_social_graph.py  test_society.py  test_ui.py
