[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "game-of-life-ai"
version = "0.1.0"
description = "A deterministic generative society sandbox powered by local Ollama models"
readme = "readme.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "loguru>=0.7.2,<1",
    "pygame>=2.6,<3",
    "pydantic>=2.8,<3",
]

[project.scripts]
game-of-life = "game_of_life.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.5,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["game_of_life"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

